--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,10 @@
 2022-03-17: 5.0.1
 
-- Many thanks to @jeffdefacto for help with disputed boundaries QA
+- Many thanks to @jeffdefacto for help with disputed boundaries research
 
 GENERAL
 
-1)	Bug fix polish for alternate points of view added in v5.0.0 release.
+1)	Bug fix polish for alternate points-of-view (POV) added in v5.0.0 release.
 
 - UPDATED:  NATURAL_EARTH_QUICK_START
 - UPDATED:  10M_CULTURAL
@@ -16,7 +16,7 @@ GENERAL
 
 NATURAL_EARTH_QUICK_START
 
-- UPDATED:  - Set fallback project POV to featurecla
+- UPDATED:  - Set fallback project POV to featurecla, and default to fclass_us
 	        - Add POV for admin-1 region labels
 	        - Render line of control boundary more like disputed boundary
 	        - Render indefinite boundary more like solid country boundary
@@ -24,19 +24,21 @@ NATURAL_EARTH_QUICK_START
 HOUSEKEEPING
 
 - UPDATED:  NE_ADMIN_0_DETAILS
-            - Point-of-view polish and consistency checks
             - Split Donbass into component states, which are recognized by Russia
             - Added name translations for new disputed areas
             - Ilemi Triangle note should say South Sudan not Sudan
               Fixes #649
-            - Corrected a few #N/A values in POV columns
+            - Adds Siachen Glacier as a disputed area for most POVs
+              Fixes #686
+            - Corrected a several #N/A values in POV and name_* columns
+            - Other point-of-view polish and consistency checks
 
 10M_CULTURAL
 
 - UPDATED:  ne_10m_admin-0 themes, including:
 			ne_10m_admin_0_sovereignty
 			ne_10m_admin_0_countries
-			ne_10m_admin_0_countries_* (POV)
+			ne_10m_admin_0_countries_* (all point-of-views)
 			ne_10m_admin_0_countries_lakes
 			ne_10m_admin_0_map_units
 			ne_10m_admin_0_map_subunits
@@ -53,19 +55,20 @@ HOUSEKEEPING
               Fixes #698
             - Ukraine's disputed Donbass split in two, recognized as countries by Russia.
               Fixes #698
-            - Adjust Israel admin-0 line POVs for USA government policy changes
+            - Adjust Israel admin-0 line POVs for USA government policy changes in 2019
               Fixes #687
             - Kosovo is not recognized by India POV, and for India and Russia POVs
-              should instead be shown as map unit
+              should instead be shown as map unit (and China as unrecognized)
               Fixes #686
             - Pakistan's claim into India around Junagadh and Manavadar isn't
               recognized by most countries
               Fixes #699
-            - Adds Siachen Glacier as a disputed area for most POVs
+            - Adds Siachen Glacier between India and Pakistan as disputed for most POVs
               Fixes #686
-            - Nagorno Karabakh 2020 Ceasefire line POV was inconsistent
+            - The 2020 ceasefire line in Azerbaijan for Artsakh (Nagorno-Karabakh)
+              had an inconsistent POV
               Fixes #700
-            - Caspian Sea is no longer included as null polygon in disputed themes
+            - Caspian Sea is no longer included as null props polygon in disputed themes
               Fixes #690
             - Increase point-of-view consistency between disputed lines and areas
 - UPDATED:  ne_10m_admin-1 themes, including:
@@ -78,12 +81,12 @@ HOUSEKEEPING
 			ne_10m_admin_1_label_points_details
             - Disable Morocco admin-1 lines in Western Sahara for most POVs
               Fixes #688
-            - Add Morocco admin-1 claim lines into Western Sahara
-              (out of data for the regions, sorry)
+            - Add Morocco admin-1 claim lines in Western Sahara
+              (perpetuating out of data alignments for the regions, sorry)
               Fixes #688
-            - Kosovo subdivisions aren't recognized by India, Russia, or China POVs
+            - Kosovo admin-1 aren't recognized by India, Russia, or China POVs
               Fixes #686
-            - Fix scalerank for Kashmir boundary line, and update polygon POVs
+            - Fix scalerank for Kashmir admin-1 line, and update polygon POVs
               Fixes #686
             - Disable Israel admin-1 lines for PS, PK, SA, BD, and ID POVs
               Fixes #687
@@ -103,7 +106,7 @@ HOUSEKEEPING
 			ne_50m_admin_0_map_subunits
 			ne_50m_admin_0_breakaway_disputed_areas
 			- Same changes as 10m cultural themes
-            - Adjust Israel admin-0 line in Golan west to actual line of control.
+            - Adjust Israel admin-0 line in Golan Heights west to actual line of control
               Fixes #687
  - UPDATED: ne_50m_admin-1 related themes, including:
 			ne_50m_admin_1_states_provinces
@@ -125,7 +128,7 @@ HOUSEKEEPING
  - UPDATED: ne_110m_admin-1 related themes, including:
 			ne_110m_admin_1_states_provinces
 			ne_110m_admin_1_states_provinces_lakes
-			- Same changes as 10m cultural themes data table edits
+			- Same changes as 10m cultural themes data table edits (n/a)
 - UPDATED:  ne_110m_populated_places
             - Same changes as ne_10m_populated_places
 - UPDATED:  ne_110m_populated_places_simple
